deploy: julianbrooks/comp2850-hci-mdbook@72b8ab82c1cdfb4ec8b0c214fba284bc4cf5294a

--- a/index.html
+++ b/index.html
@@ -225,23 +225,16 @@
 <p><small>See <a href="references/process-visuals.html#semester-flow">Process Visuals</a> for captions and alternative formats.</small></p>
 <hr />
 <h2 id="assessment"><a class="header" href="#assessment">Assessment</a></h2>
-<p>Two evidence-based tasks assess all 13 HCI Learning Outcomes:</p>
-<h3 id="task-1-evaluation--findings"><a class="header" href="#task-1-evaluation--findings">Task 1: Evaluation &amp; Findings</a></h3>
+<p>One combined evidence-based assessment covers all 13 HCI Learning Outcomes:</p>
+<h3 id="combined-assessment-evaluation-redesign--verification"><a class="header" href="#combined-assessment-evaluation-redesign--verification">Combined Assessment: Evaluation, Redesign &amp; Verification</a></h3>
 <ul>
-<li><strong>Launch</strong>: Week 8 Lab 2</li>
-<li><strong>Submit</strong>: Week 9 Lab 2 (Gradescope)</li>
-<li>Design and execute task-based peer pilots (n=4+), collect quantitative and qualitative data, synthesise findings with evidence chains</li>
-<li><strong>Learning Outcomes</strong>: LO1, LO2, LO6, LO8, LO11, LO12, LO13</li>
+<li><strong>Launch</strong>: Week 9 Lab 1</li>
+<li><strong>Deadline</strong>: End of Week 10</li>
+<li><strong>Week 11</strong>: Optional refinement &amp; early marking</li>
+<li>Design and execute task-based peer pilots (n=4+), analyse quantitative and qualitative data, implement inclusive redesign based on findings, verify via regression testing (30+ checks) and re-pilots (n=2+), synthesise evidence chains and analyse societal impacts</li>
+<li><strong>Learning Outcomes</strong>: All 13 LO (LO1-LO13)</li>
 </ul>
-<h3 id="task-2-redesign--verification"><a class="header" href="#task-2-redesign--verification">Task 2: Redesign &amp; Verification</a></h3>
-<ul>
-<li><strong>Launch</strong>: Week 10 Lab 1</li>
-<li><strong>Submit</strong>: Week 11 Lab 2 (Gradescope)</li>
-<li>Implement inclusive redesign based on Task 1 findings, verify via regression testing (30+ checks) and re-pilots (n=2+), analyse societal impacts</li>
-<li><strong>Learning Outcomes</strong>: LO3, LO4, LO5, LO6, LO7, LO9, LO10, LO12, LO13</li>
-</ul>
-<p><strong>See <a href="assessment/overview.html">Assessment Overview</a> for full details</strong>, timelines, templates, marking criteria, and FAQs.</p>
-<p><strong>Weighting</strong>: See Minerva for grade breakdown.</p>
+<p><strong>See <a href="assessment/combined-assessment-FINAL.html">Combined Assessment Specification</a></strong> for full details, <strong><a href="assessment/submission-template.html">Submission Template</a></strong> for structure, <strong><a href="assessment/student-faq.html">Student FAQ</a></strong> for common questions, and <strong><a href="assessment/rubric.html">Marking Rubric</a></strong> for criteria.</p>
 <hr />
 <h2 id="key-principles"><a class="header" href="#key-principles">Key Principles</a></h2>
 <h3 id="1-people-centred-language"><a class="header" href="#1-people-centred-language">1. People-Centred Language</a></h3>
