--- a/references/screenshot-guide.html
+++ b/references/screenshot-guide.html
@@ -548,7 +548,7 @@ The status div has role="status" and aria-live="polite", ensuring screen readers
 <li><strong>Scrub</strong>: Blur or crop sensitive areas</li>
 <li><strong>Annotate</strong> (if needed): Add red arrows/boxes to highlight</li>
 <li><strong>Save</strong>: PNG format, descriptive filename</li>
-<li><strong>Organize</strong>: Move to appropriate evidence subfolder</li>
+<li><strong>Organise</strong>: Move to appropriate evidence subfolder</li>
 <li><strong>Verify</strong>: Open in PDF viewer at 100% zoom, check readability</li>
 </ol>
 <hr />
