--- a/wk09/wk9-lab2-student-guide.html
+++ b/wk09/wk9-lab2-student-guide.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Student Guide: Run Pilots &amp; Draft Task 1 - COMP2850 • Human-Computer Interaction</title>
+        <title>Student Guide: Run Pilots &amp; Draft Assessment - COMP2850 • Human-Computer Interaction</title>
 
 
         <!-- Custom HTML head -->
@@ -179,13 +179,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="week-9--lab-2--student-guide-run-pilots--draft-task-1"><a class="header" href="#week-9--lab-2--student-guide-run-pilots--draft-task-1">Week 9 • Lab 2 — Student Guide: Run Pilots &amp; Draft Task 1</a></h1>
+                        <h1 id="week-9--lab-2--student-guide-run-pilots--draft-assessment"><a class="header" href="#week-9--lab-2--student-guide-run-pilots--draft-assessment">Week 9 • Lab 2 — Student Guide: Run Pilots &amp; Draft Assessment</a></h1>
 <p><img src="https://img.shields.io/badge/COMP2850-HCI-blue" alt="COMP2850" />
 <img src="https://img.shields.io/badge/Week-9-orange" alt="Week 9" />
 <img src="https://img.shields.io/badge/Lab-2-green" alt="Lab 2" />
 <img src="https://img.shields.io/badge/Type-Student_Guide-purple" alt="Guide" /></p>
 <blockquote>
-<p><strong>Purpose</strong>: Week 9 Lab 2 is where you execute your evaluation plan - run pilots with 3-5 participants, collect data, analyse findings, and draft your Task 1 evidence pack.</p>
+<p><strong>Purpose</strong>: Week 9 Lab 2 is where you execute your evaluation plan - run pilots with 3-5 participants, collect data, analyse findings, and draft your assessment evidence pack.</p>
 </blockquote>
 <hr />
 <h2 id="deliverables"><a class="header" href="#deliverables">Deliverables</a></h2>
@@ -194,7 +194,7 @@
 <li>✅ Pilot data from 3-5 participants (<code>wk09/data/pilot-notes.md</code>)</li>
 <li>✅ Analysed findings (<code>wk09/analysis/findings.md</code>)</li>
 <li>✅ Evidence chain documentation (<code>wk09/analysis/evidence-chains.md</code>)</li>
-<li>✅ Draft Task 1 pack outline (<code>wk09/task1-draft/</code>)</li>
+<li>✅ Draft assessment pack outline (<code>wk09/assessment/</code>)</li>
 <li>✅ Updated backlog with pilot findings</li>
 </ul>
 <hr />
@@ -465,12 +465,12 @@ Each chain links data → finding → backlog → WCAG</li>
 Screenshots/quotes referenced</li>
 </ul>
 <hr />
-<h2 id="part-4-draft-task-1-pack-30-minutes"><a class="header" href="#part-4-draft-task-1-pack-30-minutes">Part 4: Draft Task 1 Pack (30 minutes)</a></h2>
-<p>Start assembling your Gradescope Task 1 submission.</p>
-<p><strong>Create</strong> <code>wk09/task1-draft/outline.md</code>:</p>
+<h2 id="part-4-draft-assessment-pack-30-minutes"><a class="header" href="#part-4-draft-assessment-pack-30-minutes">Part 4: Draft Assessment Pack (30 minutes)</a></h2>
+<p>Start assembling your assessment submission (due end Week 10).</p>
+<p><strong>Create</strong> <code>wk09/assessment/outline.md</code>:</p>
 <details>
 <summary>Click to expand: Task 1 Draft Outline</summary>
-<pre><code class="language-markdown"># Gradescope Task 1 Draft Outline
+<pre><code class="language-markdown"># Assessment Draft Outline
 
 ## Section 1: Evaluation Plan (15%)
 
@@ -556,7 +556,7 @@ Screenshots/quotes referenced</li>
 <p><strong>Checklist</strong>:</p>
 <ul>
 <li><input disabled="" type="checkbox"/>
-Task 1 outline created</li>
+Assessment outline created</li>
 <li><input disabled="" type="checkbox"/>
 All required sections listed</li>
 <li><input disabled="" type="checkbox"/>
@@ -571,7 +571,7 @@ git commit -m "feat(wk9-lab2): pilot execution, analysis, Task 1 draft
 - Collected quantitative data (times, success, errors, confidence)
 - Analysed qualitative themes from think-aloud observations
 - Documented 5 evidence chains linking data to backlog
-- Created draft Task 1 outline with all required sections
+- Created draft assessment outline with all required sections
 
 Ready for Week 10 redesign implementation."
 </code></pre>
