--- a/wk10/wk10-lab1-student-guide.html
+++ b/wk10/wk10-lab1-student-guide.html
@@ -290,7 +290,7 @@ Recommendations listed</li>
 **Fix**: Change to "Cancel (discard changes)"
 **Effort**: 10 minutes
 
-## Deferred (Week 11 or Semester 2)
+## Deferred (Post-Assessment or Semester 2)
 - Filter persistence across sessions
 - Progress indicator
 </code></pre>
@@ -317,7 +317,7 @@ git commit -m "feat(wk10-lab1): analysis and redesign prioritisation
 
 Ready for Week 10 Lab 2 redesign implementation."
 </code></pre>
-<p><strong>Next</strong>: Week 10 Lab 2 - Implement fixes, re-verify, package Task 2.</p>
+<p><strong>Next</strong>: Week 10 Lab 2 - Implement fixes, re-verify, package assessment.</p>
 
                     </main>
 
