--- a/wk10/wk10-lab2-student-guide.html
+++ b/wk10/wk10-lab2-student-guide.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Student Guide: Redesign, Re-Verify &amp; Package Task 2 - COMP2850 • Human-Computer Interaction</title>
+        <title>Student Guide: Redesign, Re-Verify &amp; Package Assessment - COMP2850 • Human-Computer Interaction</title>
 
 
         <!-- Custom HTML head -->
@@ -179,20 +179,20 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="week-10--lab-2--student-guide-redesign-re-verify--package-task-2"><a class="header" href="#week-10--lab-2--student-guide-redesign-re-verify--package-task-2">Week 10 • Lab 2 — Student Guide: Redesign, Re-Verify &amp; Package Task 2</a></h1>
+                        <h1 id="week-10--lab-2--student-guide-redesign-re-verify--package-assessment"><a class="header" href="#week-10--lab-2--student-guide-redesign-re-verify--package-assessment">Week 10 • Lab 2 — Student Guide: Redesign, Re-Verify &amp; Package assessment</a></h1>
 <p><img src="https://img.shields.io/badge/COMP2850-HCI-blue" alt="COMP2850" />
 <img src="https://img.shields.io/badge/Week-10-orange" alt="Week 10" />
 <img src="https://img.shields.io/badge/Lab-2-green" alt="Lab 2" />
 <img src="https://img.shields.io/badge/Type-Student_Guide-purple" alt="Guide" /></p>
 <blockquote>
-<p><strong>Purpose</strong>: Week 10 Lab 2 is about implementing your priority redesigns from Lab 1, re-verifying with accessibility testing, and assembling your Task 2 submission package.</p>
+<p><strong>Purpose</strong>: Week 10 Lab 2 is about implementing your priority redesigns from Lab 1, re-verifying with accessibility testing, and assembling your assessment submission package.</p>
 </blockquote>
 <hr />
 <h2 id="deliverables"><a class="header" href="#deliverables">Deliverables</a></h2>
 <ul>
 <li>✅ Priority fixes implemented (2-3 from wk10-lab1 priorities)</li>
 <li>✅ Re-verification evidence (<code>wk10/evidence/</code>)</li>
-<li>✅ Task 2 draft package (<code>wk10/task2-draft/</code>)</li>
+<li>✅ assessment draft package (<code>wk10/assessment/</code>)</li>
 <li>✅ Updated backlog with “Fixed” status</li>
 </ul>
 <hr />
@@ -276,9 +276,9 @@ Regression checked</li>
 Evidence documented</li>
 </ul>
 <hr />
-<h2 id="part-3-assemble-task-2-package-40-minutes"><a class="header" href="#part-3-assemble-task-2-package-40-minutes">Part 3: Assemble Task 2 Package (40 minutes)</a></h2>
-<p><strong>Create</strong> <code>wk10/task2-draft/outline.md</code>:</p>
-<pre><code class="language-markdown"># Gradescope Task 2 Draft Outline
+<h2 id="part-3-assemble-assessment-package-40-minutes"><a class="header" href="#part-3-assemble-assessment-package-40-minutes">Part 3: Assemble Assessment Package (40 minutes)</a></h2>
+<p><strong>Create</strong> <code>wk10/assessment/outline.md</code>:</p>
+<pre><code class="language-markdown"># assessment Draft Outline
 
 ## Section 1: Redesign Rationale (20%)
 
@@ -349,7 +349,7 @@ Evidence documented</li>
 <p><strong>Checklist</strong>:</p>
 <ul>
 <li><input disabled="" type="checkbox"/>
-Task 2 outline created</li>
+Assessment outline created</li>
 <li><input disabled="" type="checkbox"/>
 All sections listed</li>
 <li><input disabled="" type="checkbox"/>
@@ -364,7 +364,7 @@ git commit -m "feat(wk10-lab2): priority fixes implemented and verified
 - Fixed edit inline no-JS failure (debugged PRG flow)
 - Clarified Cancel button label
 - Re-verified with axe and manual WCAG testing
-- Created Task 2 draft outline
+- Created assessment draft outline
 
 Ready for Week 11 studio crit and final submission."
 </code></pre>
