--- a/wk11/wk11-lab1-student-guide.html
+++ b/wk11/wk11-lab1-student-guide.html
@@ -337,7 +337,7 @@ Noted actionable items</li>
 - [ ] **Delete confirmation page for no-JS** (Peer 2)
   - Would improve WCAG 3.3.4 compliance
   - Effort: 1-2 hours
-  - If not done: Document as future work in Task 2
+  - If not done: Document as future work in assessment
 
 ---
 
