--- a/wk11/wk11-lab2-student-guide.html
+++ b/wk11/wk11-lab2-student-guide.html
@@ -185,14 +185,14 @@
 <img src="https://img.shields.io/badge/Lab-2-green" alt="Lab 2" />
 <img src="https://img.shields.io/badge/Type-Student_Guide-purple" alt="Guide" /></p>
 <blockquote>
-<p><strong>Purpose</strong>: Week 11 Lab 2 is about final refinements from studio crit feedback, assembling your portfolio, and ensuring Task 1 &amp; Task 2 are submission-ready.</p>
+<p><strong>Purpose</strong>: Week 11 Lab 2 is about final refinements from studio crit feedback, assembling your portfolio, and ensuring assessment &amp; assessment are ready for review.</p>
 </blockquote>
 <hr />
 <h2 id="deliverables"><a class="header" href="#deliverables">Deliverables</a></h2>
 <ul>
 <li>✅ Crit action items completed</li>
-<li>✅ Task 1 final submission (<code>wk11/task1-final/</code>)</li>
-<li>✅ Task 2 final submission (<code>wk11/task2-final/</code>)</li>
+<li>✅ assessment assessment refinement (<code>submission-template.md + evidence/</code>)</li>
+<li>✅ assessment assessment refinement (<code>submission-template.md + evidence/</code>)</li>
 <li>✅ Portfolio assembled (<code>wk11/portfolio/</code>)</li>
 <li>✅ Submission checklist verified</li>
 </ul>
@@ -235,8 +235,8 @@ Retested with accessibility tools</li>
 Documented in refinements file</li>
 </ul>
 <hr />
-<h2 id="part-2-finalize-task-1-30-minutes"><a class="header" href="#part-2-finalize-task-1-30-minutes">Part 2: Finalize Task 1 (30 minutes)</a></h2>
-<p><strong>Copy</strong> <code>wk09/task1-draft/</code> → <code>wk11/task1-final/</code></p>
+<h2 id="part-2-finalize-assessment-30-minutes"><a class="header" href="#part-2-finalize-assessment-30-minutes">Part 2: Finalize assessment (30 minutes)</a></h2>
+<p><strong>Copy</strong> <code>wk09/assessment/</code> → <code>submission-template.md + evidence/</code></p>
 <h3 id="final-checks"><a class="header" href="#final-checks">Final Checks</a></h3>
 <ul>
 <li><input disabled="" type="checkbox"/>
@@ -267,8 +267,8 @@ Tables formatted consistently</li>
 <li><input disabled="" type="checkbox"/>
 Backlog CSV included</li>
 </ul>
-<p><strong>Create</strong> <code>wk11/task1-final/submission-checklist.md</code>:</p>
-<pre><code class="language-markdown"># Task 1 Submission Checklist
+<p><strong>Create</strong> <code>submission-template.md + evidence/submission-checklist.md</code>:</p>
+<pre><code class="language-markdown"># assessment Submission Checklist
 
 - [ ] Main document: PDF, 2500-3000 words
 - [ ] Appendix A: Evaluation protocol (`wk09/research/protocol.md`)
@@ -279,8 +279,8 @@ Backlog CSV included</li>
 - [ ] Submitted before deadline: [YYYY-MM-DD HH:MM]
 </code></pre>
 <hr />
-<h2 id="part-3-finalize-task-2-30-minutes"><a class="header" href="#part-3-finalize-task-2-30-minutes">Part 3: Finalize Task 2 (30 minutes)</a></h2>
-<p><strong>Copy</strong> <code>wk10/task2-draft/</code> → <code>wk11/task2-final/</code></p>
+<h2 id="part-3-finalize-assessment-30-minutes"><a class="header" href="#part-3-finalize-assessment-30-minutes">Part 3: Finalize assessment (30 minutes)</a></h2>
+<p><strong>Copy</strong> <code>wk10/assessment/</code> → <code>submission-template.md + evidence/</code></p>
 <h3 id="final-checks-1"><a class="header" href="#final-checks-1">Final Checks</a></h3>
 <ul>
 <li><input disabled="" type="checkbox"/>
@@ -299,7 +299,7 @@ Backlog CSV included</li>
 <strong>Evidence folder</strong>: Before/after screenshots, axe reports</li>
 </ul>
 <h3 id="quality-check-1"><a class="header" href="#quality-check-1">Quality Check</a></h3>
-<p>Same as Task 1 plus:</p>
+<p>Same as assessment plus:</p>
 <ul>
 <li><input disabled="" type="checkbox"/>
 Code changes clearly explained</li>
@@ -337,12 +337,12 @@ This portfolio documents my HCI journey from Week 6 (needs-finding) to Week 11 (
 
 ### Week 9: Evaluation
 - **Lab 1**: Created evaluation plan (4 tasks, 7 metrics, ethics protocol)
-- **Lab 2**: Ran 5 pilots, analysed findings, drafted Task 1
+- **Lab 2**: Ran 5 pilots, analysed findings, drafted assessment
 - **Key learning**: Small sample (n=5) still reveals critical usability issues
 
 ### Week 10: Redesign
 - **Lab 1**: Prioritised 3 fixes based on Week 9 data
-- **Lab 2**: Implemented fixes, re-verified, drafted Task 2
+- **Lab 2**: Implemented fixes, re-verified, drafted assessment
 - **Key learning**: Trade-offs inevitable (e.g., no-JS delete confirmation deferred)
 
 ### Week 11: Synthesis
@@ -382,7 +382,7 @@ This portfolio documents my HCI journey from Week 6 (needs-finding) to Week 11 (
 ---
 
 **Repository**: [Link to your Git repo if public]
-**Gradescope**: Task 1 [submission link], Task 2 [submission link]
+**Gradescope**: assessment [submission link], assessment [submission link]
 </code></pre>
 <p><strong>Checklist</strong>:</p>
 <ul>
@@ -400,14 +400,14 @@ Reflection thoughtful</li>
 <p><strong>Create</strong> <code>wk11/FINAL-SUBMISSION-CHECKLIST.md</code>:</p>
 <pre><code class="language-markdown"># FINAL SUBMISSION CHECKLIST
 
-## Task 1: Evaluation &amp; Findings
+## assessment: Evaluation &amp; Findings
 - [ ] Main document (PDF): 2500-3000 words
 - [ ] All 4 sections complete
 - [ ] Evidence folder included
 - [ ] Uploaded to Gradescope
 - [ ] Deadline: [YYYY-MM-DD HH:MM]
 
-## Task 2: Redesign &amp; Verification
+## assessment: Redesign &amp; Verification
 - [ ] Main document (PDF): 2000-2500 words
 - [ ] Before/after code + screenshots
 - [ ] Evidence folder included
@@ -440,11 +440,11 @@ Reflection thoughtful</li>
 <hr />
 <h2 id="commit--celebrate"><a class="header" href="#commit--celebrate">Commit &amp; Celebrate</a></h2>
 <pre><code class="language-bash">git add wk11/ wk*/task*-final/
-git commit -m "feat(wk11-lab2): final submissions ready
+git commit -m "feat(wk11-lab2): assessment refinement ready
 
 - Completed post-crit action items (focus management)
-- Finalized Task 1 (evaluation &amp; findings)
-- Finalized Task 2 (redesign &amp; verification)
+- Finalized assessment (evaluation &amp; findings)
+- Finalized assessment (redesign &amp; verification)
 - Assembled portfolio with week-by-week highlights
 - All quality checks passed
 
@@ -463,7 +463,7 @@ git push --tags
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../assessment/overview.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../assessment/combined-assessment-FINAL.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -477,7 +477,7 @@ git push --tags
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../assessment/overview.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../assessment/combined-assessment-FINAL.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
