--- a/wk09/wk9-lab1-student-guide.html
+++ b/wk09/wk9-lab1-student-guide.html
@@ -409,7 +409,7 @@ Data collection plan specified</li>
 
 ## Purpose
 
-Evaluate task manager usability and accessibility through structured pilots. Data will inform Week 10 redesign and Gradescope Task 1 submission.
+Evaluate task manager usability and accessibility through structured pilots. Data will inform Week 10 redesign and assessment submission.
 
 ## Consent (GDPR/Data Protection Act 2018)
 
@@ -657,7 +657,7 @@ git commit -m "feat(wk9-lab1): evaluation planning and instrumentation
 
 Ready for Week 9 Lab 2 pilots."
 </code></pre>
-<p><strong>Next</strong>: Week 9 Lab 2 - Run pilots, collect data, analyse, draft Task 1.</p>
+<p><strong>Next</strong>: Week 9 Lab 2 - Run pilots, collect data, analyse, draft assessment evidence.</p>
 
                     </main>
 
