--- a/wk10/wk10-lab1-analysis-prioritisation.html
+++ b/wk10/wk10-lab1-analysis-prioritisation.html
@@ -189,13 +189,13 @@
 <p>📖 <strong>Essential</strong>:</p>
 <ul>
 <li>Review <a href="../references/evaluation-metrics-quickref.html">Evaluation Metrics Quick Reference</a> (formulas for median, MAD, error rates)</li>
-<li>Review Week 9 Lab 2 findings (<code>wk09/lab-wk9/submission/task1-draft/05-findings.md</code>)</li>
-<li><a href="https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-problems/">Nielsen: Prioritizing Web Usability Issues</a></li>
+<li>Review Week 9 Lab 2 findings (<code>wk09/assessment/05-findings.md</code>)</li>
+<li><a href="https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-problems/">Nielsen: Prioritising Web Usability Issues</a></li>
 </ul>
 <p>📖 <strong>Contextual</strong>:</p>
 <ul>
 <li><a href="https://www.gov.uk/service-manual/measuring-success/using-data-to-improve-your-service">GOV.UK: Using data to improve your service</a></li>
-<li><a href="https://www.w3.org/WAI/test-evaluate/report/">W3C: Prioritizing Accessibility Issues</a></li>
+<li><a href="https://www.w3.org/WAI/test-evaluate/report/">W3C: Prioritising Accessibility Issues</a></li>
 </ul>
 <hr />
 <h2 id="introduction-from-data-to-decisions"><a class="header" href="#introduction-from-data-to-decisions">Introduction: From Data to Decisions</a></h2>
@@ -208,7 +208,7 @@
 </ul>
 <p><strong>Why this matters</strong>:</p>
 <ul>
-<li><strong>Gradescope Task 2</strong>: Requires before/after metrics + evidence of data-driven redesign</li>
+<li><strong>assessment</strong>: Requires before/after metrics + evidence of data-driven redesign</li>
 <li><strong>Week 10 Lab 2</strong>: You’ll implement Priority 1 fixes—planning today prevents thrashing tomorrow</li>
 <li><strong>Professional practice</strong>: Product decisions require justification (stakeholders ask “why this fix?”)</li>
 </ul>
@@ -377,7 +377,7 @@ Issue: “Validation errors not announced by SR”</p>
 <li><strong>Score</strong>: (5+5)-2 = <strong>8</strong> → <strong>Priority 1</strong></li>
 </ul>
 <p><strong>HCI Connection</strong>: Prioritisation makes <strong>inclusion explicit</strong>—not just “fix the bugs” but “fix barriers first.”</p>
-<p>🔗 <a href="https://www.w3.org/WAI/test-evaluate/report/#prioritise">W3C: Prioritizing Accessibility Issues</a></p>
+<p>🔗 <a href="https://www.w3.org/WAI/test-evaluate/report/#prioritise">W3C: Prioritising Accessibility Issues</a></p>
 </blockquote>
 <h3 id="evidence-chain-revisited"><a class="header" href="#evidence-chain-revisited">Evidence Chain (Revisited)</a></h3>
 <blockquote>
@@ -393,7 +393,7 @@ Issue: “Validation errors not announced by SR”</p>
 <li><strong>Fix plan</strong>: Add <code>tabindex="-1"</code> to error summary, auto-focus on page load</li>
 <li><strong>Verification</strong> (Week 10 Lab 2): Retest with no-JS, measure completion rate ≥0.9</li>
 </ol>
-<p><strong>Gradescope Task 2 requires</strong>:</p>
+<p><strong>assessment requires</strong>:</p>
 <ul>
 <li>Before metrics (Week 9)</li>
 <li>Analysis + prioritisation (Week 10 Lab 1)</li>
@@ -408,7 +408,7 @@ Issue: “Validation errors not announced by SR”</p>
 <h3 id="step-1-create-analysis-directory-2-min"><a class="header" href="#step-1-create-analysis-directory-2-min">Step 1: Create analysis directory (2 min)</a></h3>
 <pre><code class="language-bash">mkdir -p analysis
 mkdir -p wk10/lab-wk10/docs
-mkdir -p wk10/gradescope/task2
+mkdir -p wk10/assessment
 </code></pre>
 <h3 id="step-2-verify-raw-data-3-min"><a class="header" href="#step-2-verify-raw-data-3-min">Step 2: Verify raw data (3 min)</a></h3>
 <p><strong>Open <code>data/metrics.csv</code></strong> and check:</p>
@@ -976,7 +976,7 @@ Error summary has <code>tabindex="-1"</code> and receives focus on page load</li
 <li>Zero WCAG 3.3.1 / 4.1.3 violations</li>
 <li>Evidence captured (screenshots, SR transcripts, metrics)</li>
 <li>Backlog updated (wk9-01, wk9-03 marked fixed)</li>
-<li>Task 2 evidence pack updated with before/after data</li>
+<li>assessment evidence pack updated with before/after data</li>
 </ol>
 <p><strong>If not met</strong>: Document blockers, revert changes, choose lower-priority fix.</p>
 <pre><code>
@@ -1048,7 +1048,7 @@ EOF
 <li><strong>Verify</strong> with 3 participants (SR, keyboard, no-JS)</li>
 <li><strong>Measure</strong> completion rate, error rate, qualitative observations</li>
 <li><strong>Update</strong> backlog with verification evidence</li>
-<li><strong>Prepare</strong> Task 2 draft pack (before/after metrics, code diffs, evidence)</li>
+<li><strong>Prepare</strong> assessment draft pack (before/after metrics, code diffs, evidence)</li>
 </ul>
 <p><strong>Before Lab 2</strong>:</p>
 <ul>
@@ -1071,8 +1071,8 @@ EOF
 </ul>
 <h3 id="prioritisation"><a class="header" href="#prioritisation">Prioritisation</a></h3>
 <ul>
-<li><a href="https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-problems/">Nielsen: Prioritizing Web Usability Problems</a></li>
-<li><a href="https://www.w3.org/WAI/test-evaluate/report/#prioritise">W3C: Prioritizing Accessibility Issues</a></li>
+<li><a href="https://www.nngroup.com/articles/how-to-rate-the-severity-of-usability-problems/">Nielsen: Prioritising Web Usability Problems</a></li>
+<li><a href="https://www.w3.org/WAI/test-evaluate/report/#prioritise">W3C: Prioritising Accessibility Issues</a></li>
 <li><a href="https://www.gov.uk/service-manual/user-research/analyse-a-research-session#prioritise-findings">GOV.UK: Prioritising user research findings</a></li>
 </ul>
 <h3 id="inclusive-design"><a class="header" href="#inclusive-design">Inclusive Design</a></h3>
