--- a/wk11/wk11-lab1-studio-crit.html
+++ b/wk11/wk11-lab1-studio-crit.html
@@ -189,8 +189,8 @@
 <p>📖 <strong>Essential</strong></p>
 <ul>
 <li><a href="https://www.ideo.com/blog/design-critique">IDEO: The Art of Critique</a> (5 min)</li>
-<li>Review your Task 2 bundle (<code>wk10/gradescope/task2/</code>)</li>
-<li>Review your analysis summary (<code>analysis/summary.md</code>) for before/after metrics</li>
+<li>Review your assessment submission (submission-template.md with all sections complete)</li>
+<li>Review your before/after metrics (Section 5: Verification Results)</li>
 </ul>
 <p>📖 <strong>Quick reference</strong></p>
 <ul>
@@ -382,7 +382,7 @@ Maps to WCAG: 2.2 AA (demonstrating compliance)</li>
 [Screenshot: error summary with no focus indicator]
 </code></pre>
 <h3 id="step-2-select-key-evidence-artifacts-10-min"><a class="header" href="#step-2-select-key-evidence-artifacts-10-min">Step 2: Select key evidence artifacts (10 min)</a></h3>
-<p><strong>From <code>wk10/gradescope/task2/05-evidence/</code></strong>:</p>
+<p><strong>From your <code>evidence/</code> folder (Section 6 of assessment)</strong>:</p>
 <p><strong>Screenshots</strong> (3-4 max):</p>
 <ul>
 <li>Before: Error present but not accessible (no <code>role=alert</code> in devtools)</li>
@@ -520,8 +520,8 @@ Backup plan ready (video or annotated screenshots)</li>
 - **Action**: Update wk10/lab-wk10/docs/redesign-brief.md notes section
 
 ### Staff
-- **Q**: "Why did you prioritize T2 over T1 when T1 had higher error rate?"
-- **Response**: T2 had 0% no-JS completion (complete block) vs T1 100% completion (just slower). Prioritized exclusion over efficiency.
+- **Q**: "Why did you prioritise T2 over T1 when T1 had higher error rate?"
+- **Response**: T2 had 0% no-JS completion (complete block) vs T1 100% completion (just slower). Prioritised exclusion over efficiency.
 - **Validation**: Staff agreed with prioritization framework logic.
 </code></pre>
 <h3 id="reviewer-role-when-watching-others"><a class="header" href="#reviewer-role-when-watching-others">Reviewer Role (when watching others)</a></h3>
@@ -612,7 +612,7 @@ What should this team consider for Semester 2?
 - Partial = Some criteria met, gaps acknowledged
 - Fail = Claims compliance but no evidence
 
-**Recommended grade** (if this were Task 2 submission): [Estimate 0-100]
+**Recommended grade** (if this were assessment submission): [Estimate 0-100]
 
 **Justification**: [2-3 sentences linking grade to evidence quality, inclusion impact, WCAG compliance]
 </code></pre>
@@ -649,7 +649,7 @@ Identified action items for Week 11 Lab 2</li>
 <p><strong>Example categorization</strong>:</p>
 <pre><code class="language-markdown">## Feedback Themes
 
-### Critical (Address before Task 2 submission)
+### Critical (Address before assessment submission)
 - Team Beta: "aria-live=assertive too intrusive" → Test polite vs assertive
 - Staff: "No evidence of VoiceOver testing" → Either test or document limitation
 
@@ -669,10 +669,10 @@ Identified action items for Week 11 Lab 2</li>
 
 wk11-02,11,medium,a11y,"Focus indicator contrast below WCAG AAA (2.8:1)",1.4.11,open,"wk11/crit/feedback-received.md Team Beta; WCAG 2.2 Focus Appearance","Increase focus outline to darker blue (#0000aa) for 3:1 contrast",true
 
-wk11-03,11,high,ux,"Remaining 25% error rate on T2—investigate cause",,"open","wk10/gradescope/task2/03-before-after-summary.md; wk11/crit/feedback-received.md Staff","Run additional pilot focusing on error triggers, check focus management",false
+wk11-03,11,high,ux,"Remaining 25% error rate on T2—investigate cause",,"open","submission-template.md Section 5 Part B; wk11/crit/feedback-received.md Staff","Run additional pilot focusing on error triggers, check focus management",false
 </code></pre>
 <p><strong>Mark completed feedback actions</strong>:</p>
-<pre><code class="language-csv">wk9-01,9,high,a11y,"Validation errors not announced by SR",4.1.3,fixed,"data/metrics.csv; wk10/gradescope/task2/05-evidence/sr-transcripts/after-nvda.txt","Addressed in Week 10 Lab 2: added role=alert + aria-live=assertive",true
+<pre><code class="language-csv">wk9-01,9,high,a11y,"Validation errors not announced by SR",4.1.3,fixed,"data/metrics.csv; evidence/sr-transcripts/after-nvda.txt","Addressed in Week 10 Lab 2: added role=alert + aria-live=assertive",true
 </code></pre>
 <h3 id="step-3-write-reflection-5-min"><a class="header" href="#step-3-write-reflection-5-min">Step 3: Write reflection (5 min)</a></h3>
 <p><strong>Update <code>wk11/reflection.md</code></strong>:</p>
@@ -696,12 +696,12 @@ wk11-03,11,high,ux,"Remaining 25% error rate on T2—investigate cause",,"open",
 Team Beta's observation about `aria-live=assertive` being too intrusive. I experienced this myself during testing but dismissed it—their feedback validated my concern. Will test `polite` alternative.
 
 **Most surprising critique**:
-Staff asked why I prioritized T2 over T1 when T1 had higher error rate. I explained: T2 had 0% no-JS completion (exclusion) vs T1 100% completion (efficiency). Staff agreed but noted I should have made this explicit in presentation. Lesson: state prioritization criteria upfront.
+Staff asked why I prioritised T2 over T1 when T1 had higher error rate. I explained: T2 had 0% no-JS completion (exclusion) vs T1 100% completion (efficiency). Staff agreed but noted I should have made this explicit in presentation. Lesson: state prioritization criteria upfront.
 
 **Hardest to hear**:
 Team Alpha noted focus indicator contrast issue (2.8:1, below 3:1). I checked this in Week 8 but forgot to fix it. Embarrassing oversight—logged wk11-02 to address.
 
-## Changes for Task 2 Submission
+## Changes for assessment Submission
 
 Based on feedback:
 1. **Add VoiceOver testing note** to `02-regression-checklist.csv`: "Tested with NVDA (Windows) and Orca (Linux). VoiceOver (macOS) not tested—recommend for Semester 2."
@@ -724,7 +724,7 @@ Team Gamma used UMUX-Lite subjective measure (2 questions, 1-7 scale). We didn't
 1. Test `aria-live=polite` vs `assertive` (30 min)
 2. Add VoiceOver limitation note to regression checklist (5 min)
 3. Document focus indicator issue in before-after summary (10 min)
-4. Final proofread of Task 2 bundle (30 min)
+4. Final proofread of assessment bundle (30 min)
 
 **Semester 2 priorities** (based on backlog):
 - Fix focus indicator contrast (wk11-02)
@@ -776,7 +776,7 @@ EOF
 <h2 id="looking-ahead-week-11-lab-2"><a class="header" href="#looking-ahead-week-11-lab-2">Looking Ahead: Week 11 Lab 2</a></h2>
 <p>Final session:</p>
 <ul>
-<li><strong>Polish Task 1 &amp; 2</strong> based on crit feedback</li>
+<li><strong>Polish assessment &amp; 2</strong> based on crit feedback</li>
 <li><strong>Assemble portfolio</strong> with evidence chains</li>
 <li><strong>Practice submission</strong> process (Gradescope upload, file check)</li>
 <li><strong>Module reflection</strong> and Semester 2 planning</li>
@@ -791,7 +791,7 @@ EOF
 <h2 id="further-reading--resources"><a class="header" href="#further-reading--resources">Further Reading &amp; Resources</a></h2>
 <h3 id="essential"><a class="header" href="#essential">Essential</a></h3>
 <ul>
-<li>Review Task 2 bundle for gaps</li>
+<li>Review assessment bundle for gaps</li>
 <li><a href="https://www.ideo.com/blog/design-critique">IDEO: The Art of Critique</a></li>
 </ul>
 <h3 id="presentation-skills"><a class="header" href="#presentation-skills">Presentation Skills</a></h3>
@@ -824,7 +824,7 @@ EOF
 </tbody></table>
 </div>
 <hr />
-<p><strong>Lab complete!</strong> You’ve presented your work with evidence, received constructive critique, and prepared for final submissions in Week 11 Lab 2.</p>
+<p><strong>Lab complete!</strong> You’ve presented your work with evidence, received constructive critique, and prepared for assessment refinement in Week 11 Lab 2.</p>
 
                     </main>
 
